--- a/017-ng_src-ng_cloak/index.html
+++ b/017-ng_src-ng_cloak/index.html
@@ -6,9 +6,10 @@
 	<script type="text/javascript" src="./controller.js"></script>
 </head>
 <body ng-controller="AppCtrl">
-	<ul class="no-list">
+	<!-- ng-cloak sirve para ocultar el div hasta que termine de ejecutar angular -->
+	<ul class="no-list" ng-cloak>
 		<li ng-repeat="repo in repos">
-				<img src="{{repo.owner_avatar}}">
+				<img ng-src="{{repo.owner.avatar_url}}" />
 				{{repo.name}}
 		</li>
 	</ul>
