--- a/019-directivas-2/index.html
+++ b/019-directivas-2/index.html
@@ -1,11 +1,12 @@
 <html ng-app="CustomDirective">
 <head>
-	<link rel="stylesheet" href="./autocomplete-jquery-ui.structure.css">
 	<meta charset="utf-8">
-	<title>Hola mundo AngularJS</title>
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular.min.js"></script>
-	<script type="text/javascript" src="./jquery-3.3.1.min.js"></script>
-	<script type="text/javascript" src="./autocomplete-jquery-ui.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Directivas</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+  <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+  <script src="autocomplete-jquery-ui.js"></script>
 	<script type="text/javascript" src="./controller.js"></script>
 
 	<style>
@@ -15,6 +16,14 @@
 			height: 100px;
 			display: inline-block;
 		}
+		.no-list li{
+			list-style-type:none;
+		}
+		body,html{
+			text-align:center;
+			background-color: #eee;
+			margin:0px;
+		}
 	</style>
 
 </head>
@@ -22,7 +31,7 @@
 	<input type="text" my-autocomplete="repos" placeholder="Busque algo" />
 	<!-- ng-cloak sirve para  -->
 	<ul class="no-list" ng-cloak>
-		<li ng-repeat="post in posts">
+		<li ng-repeat="post in posts" ng-hide="main_repo && main_repo != repo.name">
 				<div class="circular" back-img="{{post.owner.avatar_url}}"></div>
 				{{post.name}}
 		</li>
