--- a/020-ngRoute/index.html
+++ b/020-ngRoute/index.html
@@ -6,9 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Directivas</title>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+  <script src="https://code.angularjs.org/1.5.8/angular-route.min.js"></script>
   <script src="https://code.jquery.com/jquery-latest.min.js"></script>
   <script src="autocomplete-jquery-ui.js"></script>
   <script src="app.js" charset="utf-8"></script>
+  <script src="directives.js" charset="utf-8"></script>
+  <script src="controller.js" charset="utf-8"></script>
   <link rel="stylesheet" href="autocomplete-jquery-ui.structure.css">
   <style>
     .circular{
@@ -27,13 +30,8 @@
     }
   </style>
 </head>
-<body ng-controller="AppCtrl">
-  <input type="text" my-autocomplete="repos" placeholder="Buscar Repositorio">
-  <ul class="no-list" ng-cloak>
-    <li ng-repeat="repo in posts" ng-hide="main_repo && main_repo != repo.name">
-      <div class="circular" back-img="{{repo.owner.avatar_url}}"></div>
-      <h1 class="inline-block">{{repo.full_name}}</h1>
-    </li>
-  </ul>
+<body>
+    <div ng-view></div>
+
 </body>
 </html>
