--- a/024-practica_final/index.html
+++ b/024-practica_final/index.html
@@ -28,10 +28,10 @@
 						<h1 class="fs-display-3 display-block">Posts App</h1>
 				</div>
 				<div flex-item="1">
-					<a href="#">Inicio</a>
+					<a href="#/">Inicio</a>
 				</div>
 				<div flex-item="1">
-					<a href="#">Crear Post</a>
+					<a href="#/posts/new">Crear Post</a>
 				</div>
 			</div>
 	</nav>
